--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <canvas id="canvas" width="800" height="500"></canvas>
     <script src="src/constant.js"></script>
+    <script src="src/birds.js"></script>
     <script src="src/hunter1.js"></script>
     <script src="src/background.js"></script>
     <script src="src/boomerang.js"></script>
