--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="src/birds.js"></script>
     <script src="src/hunter1.js"></script>
     <script src="src/background.js"></script>
+    <script src="src/knife.js"></script>
     <script src="src/boomerang.js"></script>
     <script src="src/game.js"></script>
     <script src="src/main.js"></script>
