score and general start

--- a/index.html
+++ b/index.html
@@ -8,14 +8,43 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <canvas id="canvas" width="800" height="500"></canvas>
-    <script src="src/constant.js"></script>
-    <script src="src/birds.js"></script>
-    <script src="src/hunter1.js"></script>
-    <script src="src/background.js"></script>
-    <script src="src/knife.js"></script>
-    <script src="src/boomerang.js"></script>
-    <script src="src/game.js"></script>
-    <script src="src/main.js"></script>
+    <h1 class = "tittle"> the birds</h1>
+  <div id="welcome">
+    <div class = "wrapper">
+      <div class = "row" >
+        <div class = "column" >
+        <h3>
+            blablablablablablablabblalb
+          </h3>
+        </div>
+      
+    
+    <div class = "column" >
+     <img class="hitchcockBack" src="images/hitchcock first page.png" />
+    </div> 
+    <div class = "column" >
+        <h3>
+            blablablablablablablabblalb
+          </h3>
+     <p>⬅️  Left </p>
+      <p> ➡️  Right</p>  
+      <p><span> ⎵ </span> Shoot</p>   
+      <button id="start-btn">START</button>
+    </div>
+    </div>
+</div>
+</div>
+  
+  <div>
+  <canvas id="canvas" width="800" height="500"></canvas>
+  <script src="src/constant.js"></script>
+  <script src="src/hunter1.js"></script>
+  <script src="src/background.js"></script>
+  <script src="src/birds.js"></script>
+  <script src="src/knife.js"></script>
+  <script src="src/boomerang.js"></script>
+  <script src="src/game.js"></script>
+  <script src="src/main.js"></script>
+   </div>
 </body>
 </html>
