added a new enemy

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
      <p>⬅️  Left </p>
       <p> ➡️  Right</p>  
       <p><span> ⎵ </span> Shoot</p>   
-     
       <button id="start-btn">START</button>
     </div>
     </div>
@@ -42,7 +41,9 @@
   <script src="./assets/js/models/hunter1.js"></script>
   <script src="./assets/js/models/background.js"></script>
   <script src="./assets/js/models/birds.js"></script>
+  <script src="./assets/js/models/birds2.js"></script>
   <script src="./assets/js/models/knife.js"></script>
+  <script src="./assets/js/models/knife2.js"></script>
   <script src="./assets/js/models/boomerang.js"></script>
   <script src="./assets/js/models/game.js"></script>
   <script src="./assets/js//main.js"></script>
