added some css style

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1 class = "tittle"> the birds</h1>
-  <div id="welcome">
+  <h1 class = "tittle"> the birds</h1>
+  <div id = "welcome">
     <div class = "wrapper">
       <div class = "row" >
         <div class = "column" >
@@ -29,7 +29,7 @@
      <p>⬅️  Left </p>
       <p> ➡️  Right</p>  
       <p><span> ⎵ </span> Shoot</p>   
-      <button id="start-btn">START</button>
+      <button class="wrap" id="start-btn">START</button>
     </div>
     </div>
 </div>
