added the last enemy

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <script src="./assets/js/models/constant.js"></script>
   <script src="./assets/js/models/hunter1.js"></script>
   <script src="./assets/js/models/background.js"></script>
+  <script src="./assets/js/models/birdsDeath"></script>
   <script src="./assets/js/models/birds.js"></script>
   <script src="./assets/js/models/birds2.js"></script>
   <script src="./assets/js/models/knife.js"></script>
