--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       <div class = "row" >
         <div class = "column" >
         <h3>
-            blablablablablablablabblalb
+          After the birds invaded the world in 1963 for the first time, 60 years later they have returned with sronger than ever. Now they have mutated and are much more aggressive.
+          Hitchkock has had no choice other than to resurrect himself and attack them harshly.
+          <br>
+          Do you think Hitchkock can make all the birds disappear this time?
           </h3>
         </div>
       
@@ -24,11 +27,13 @@
     </div> 
     <div class = "column" >
         <h3>
-            blablablablablablablabblalb
+          The rules of the game are easy for Hitchcock. This time he has a boomerang in his hands, it is his only weapon at the moment.
+          60 years later, various types of birds have appeared, some more aggressive than others, Hithcock will have to discover them
+          With what kind of weapons will the birds surprise this time?
           </h3>
      <p>⬅️  Left </p>
       <p> ➡️  Right</p>  
-      <p><span> ⎵ </span> Shoot</p>   
+      <p><span> ⎵ </span> Boomerang</p>   
       <button class="wrap" id="start-btn">START</button>
     </div>
     </div>
