--- a/index.html
+++ b/index.html
@@ -1,58 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Birds</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-  <h1 class = "tittle"> the birds</h1>
-  <div id = "welcome">
-    <div class = "wrapper">
-      <div class = "row" >
-        <div class = "column" >
-        <h3>
-          After the birds invaded the world in 1963 for the first time, 60 years later they have returned with sronger than ever. Now they have mutated and are much more aggressive.
-          Hitchkock has had no choice other than to resurrect himself and attack them harshly.
-          <br>
-          Do you think Hitchkock can make all the birds disappear this time?
-          </h3>
+  </head>
+  <body>
+    <h1 class="tittle">the birds</h1>
+    <div id="welcome">
+      <div class="wrapper">
+        <div class="row">
+          <div class="column">
+            <h3>
+              After the birds invaded the world in 1963 for the first time, 60
+              years later they have come back stronger than ever. Now they have
+              mutated and the birds are much more aggressive. Hitchkock has had
+              no choice other than to resurrect himself and attack them harshly.
+              <br />
+              Do you think Hitchkock can make all the birds disappear this time?
+            </h3>
+          </div>
+          <div class="column">
+            <img
+              class="hitchcockBack"
+              src="assets/images/hitchcock first page.png"/>
+          </div>
+          <div class="column">
+            <h3>
+              The rules of the game are easy for Hitchcock. This time he has a
+              boomerang in his hands, it is his only weapon at the moment. 60
+              years later, various types of birds have appeared, some more
+              aggressive than others, Hithcock will have to discover them.
+              With what kind of weapons will the birds surprise this time?
+              If Hitchcock wants the birds to dissapear forever, he needs to kill 50 birds this time.
+            </h3>
+            <p>Hitchcock´s intructions:</p>
+            <p>⬅️ Left</p>
+            <p>➡️ Right</p>
+            <p><span> ⎵ </span> Boomerang</p>
+            <button class="wrap" id="start-btn">START</button>
+          </div>
         </div>
-      
-    
-    <div class = "column" >
-     <img class="hitchcockBack" src="assets/images/hitchcock first page.png" />
-    </div> 
-    <div class = "column" >
-        <h3>
-          The rules of the game are easy for Hitchcock. This time he has a boomerang in his hands, it is his only weapon at the moment.
-          60 years later, various types of birds have appeared, some more aggressive than others, Hithcock will have to discover them
-          With what kind of weapons will the birds surprise this time?
-          </h3>
-     <p>⬅️  Left </p>
-      <p> ➡️  Right</p>  
-      <p><span> ⎵ </span> Boomerang</p>   
-      <button class="wrap" id="start-btn">START</button>
+      </div>
     </div>
+    <div>
+      <canvas id="canvas" width="1000" height="500"></canvas>
+      <script src="./assets/js/models/constant.js"></script>
+      <script src="./assets/js/models/hunter1.js"></script>
+      <script src="./assets/js/models/background.js"></script>
+      <script src="./assets/js/models/birdsDeath.js"></script>
+      <script src="./assets/js/models/birds.js"></script>
+      <script src="./assets/js/models/birds2.js"></script>
+      <script src="./assets/js/models/knife.js"></script>
+      <script src="./assets/js/models/knife2.js"></script>
+      <script src="./assets/js/models/boomerang.js"></script>
+      <script src="./assets/js/models/game.js"></script>
+      <script src="./assets/js//main.js"></script>
     </div>
-</div>
-</div>
-
-  <div>
-  <canvas id="canvas" width="1000" height="500"></canvas>
-  <script src="./assets/js/models/constant.js"></script>
-  <script src="./assets/js/models/hunter1.js"></script>
-  <script src="./assets/js/models/background.js"></script>
-  <script src="./assets/js/models/birdsDeath.js"></script>
-  <script src="./assets/js/models/birds.js"></script>
-  <script src="./assets/js/models/birds2.js"></script>
-  <script src="./assets/js/models/knife.js"></script>
-  <script src="./assets/js/models/knife2.js"></script>
-  <script src="./assets/js/models/boomerang.js"></script>
-  <script src="./assets/js/models/game.js"></script>
-  <script src="./assets/js//main.js"></script>
-   </div>
-</body>
+  </body>
 </html>
