--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
               After the birds invaded the world in 1963 for the first time, 60
               years later they have come back stronger than ever. Now they have
               mutated and the birds are much more aggressive. Hitchkock has had
-              no choice other than to resurrect himself and attack them harshly.
+              no choice other than to resurrect himself and attack them aggressively.
               <br />
-              Do you think Hitchkock can make all the birds disappear this time?
+              Do you think Hitchcock can make all the birds disappear this time?
             </h3>
           </div>
           <div class="column">
@@ -33,7 +33,7 @@
               boomerang in his hands, it is his only weapon at the moment. 60
               years later, various types of birds have appeared, some more
               aggressive than others, Hithcock will have to discover them.
-              With what kind of weapons will the birds surprise this time?
+              What kind of weapons will the birds surprise him with this time?
               If Hitchcock wants the birds to dissapear forever, he needs to kill 50 birds this time.
             </h3>
             <p>Hitchcock´s intructions:</p>
@@ -49,6 +49,7 @@
       <canvas id="canvas" width="1000" height="500"></canvas>
       <script src="./assets/js/models/constant.js"></script>
       <script src="./assets/js/models/hunter1.js"></script>
+      
       <script src="./assets/js/models/background.js"></script>
       <script src="./assets/js/models/birdsDeath.js"></script>
       <script src="./assets/js/models/birds.js"></script>
